--- a/css.css
+++ b/css.css
@@ -1,6 +1,5 @@
 
 
-
 /* Shapes */
 
 body {
@@ -8,7 +7,8 @@ body {
 	font-family: 'Chelsea Market', sans-serif;
 	background-image: url(images/background.png);
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: 100% 100%;
+	height: 100%;
 	
 }
 
@@ -20,7 +20,6 @@ a {text-decoration:none;}
 	width: 100%;
 	max-width: 1500px;
 	background-color: black;
-	min-height: 900px;
 	align-items: flex-start;
 	}
 
@@ -28,13 +27,14 @@ a {text-decoration:none;}
 {
 	display: flex;
 	background-color: black;
-	width: 30%;
 	min-width: 200px;
-	min-height: 900px;
+	width: 30%;
+	height: 100%;
 	flex-direction: column;
 
 	
 }
+
 
 .bio_footer_container {
 	background-color: white;
@@ -145,6 +145,19 @@ a {text-decoration:none;}
 	
 }
 
+/* to top button */
+.top_btn {
+	display: flex;
+	margin: 0 auto;
+	max-width: 100px;
+	max-height: 100px;
+	position: fixed;
+	bottom: 5%;
+	left: 2.5%;
+	opacity: .4;
+
+	
+}
 
 
 /*Dictates the size and padding of the social media icons.*/
@@ -163,6 +176,10 @@ a {text-decoration:none;}
 @media only screen and (max-width: 1080px)
 {
 	.side_rect {
+		display: none;
+	}
+
+	.top_btn {
 		display: none;
 	}
 
