--- a/css.css
+++ b/css.css
@@ -77,6 +77,18 @@ a {text-decoration:none;}
 
 }
 
+.hero {
+	display: flex;
+	flex-direction: column;
+	background-image: url(images/hero.png);
+	min-width: 100%;
+	min-height: 500px;
+	background-size: cover;
+	color: white;
+	align-self: flex-start;
+	justify-content: flex-end;
+
+}
 /*///////// text properties //////////*/
 
 
@@ -230,6 +242,29 @@ a {text-decoration:none;}
 	width: 90%;
 	
 }
+
+#hero_img {
+	
+	width: 100%;
+	
+}
+
+.hero_text {
+	padding-left: 20px;
+	padding-right: 20px;
+	font-size: 20px;
+	margin-bottom: 30px;
+}
+
+.hero_text h1 {
+	font-size: 50px;
+}
+
+
+.hero_text p {
+	opacity: .5;
+}
+
 
 /*//////////// media query ///////////*/
 
